--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_DEV_BASE_URL=https://dev2024.co.in/web/lgn/admin/api
-REACT_APP_LOCAL_BASE_URL=https://lgn-backend-ypss.onrender.com
+REACT_APP_LOCAL_BASE_URL=http://localhost:8080
